# ROS_WS_2

./: .gitignore
.marscode/: deviceInfo.json
arm_and_gripper/: package.xml
arm_and_gripper/config/: arm_and_gripper.yaml  servo_params.yaml
arm_and_gripper/include/arm_and_gripper/: servo_controller.h
arm_and_gripper/launch/: arm_and_gripper.launch
arm_and_gripper/scripts/: pigpiod_start.sh
arm_and_gripper/src/: arm_and_gripper_node.cpp
arm_and_gripper/srv/: PlaceMedicine.srv  ServoCommand.srv
arm_interface/: CMakeLists.txt
arm_interface/include/arm_interface/: arm_controller.h
arm_interface/launch/: arm.launch
can_motor_interface/include/can_motor_interface/: can_interface.h
docs/: ZDT Y42第二代闭环步进电机使用说明V1.1.md  ZDT闭环步进电机MODBUS协议使用说明V1.0.0_251204.md  mission_system_testing.md  robot_navigation_architecture.md  固定路线模块使用说明.md  机器人导航系统架构说明.md  赛事功能差距分析与修改方案.md
fine_tuning/: CMakeLists.txt  package.xml
fine_tuning/config/: fine_tuning.yaml
fine_tuning/include/fine_tuning/: fine_tuning_controller.h
fine_tuning/src/: fine_tuning_node.cpp
motion_planner/: CMakeLists.txt  package.xml
motion_planner/include/motion_planner/: base_odometry_node.h  cmd_vel_mux_node.h  planner.h
motion_planner/launch/: planner.launch
motion_planner/src/: cmd_vel_mux_node.cpp  fixed_route_runner.cpp  fixed_route_runner_node.cpp  planner_node.cpp
path_manager/: CMakeLists.txt  package.xml
path_manager/cfg/: PathManager.cfg
path_manager/include/path_manager/: path_tracker.h
path_manager/src/: path_manager_node.cpp
path_manager/srv/: LoadPath.srv
robot_bringup/: CMakeLists.txt
robot_bringup/config/: arm_params.yaml  fixed_route.yaml  path_tracker.yaml  paths.yaml  robot_params.yaml
robot_bringup/launch/: robot_bringup.launch
robot_navigation/: CMakeLists.txt  package.xml
robot_navigation/config/: navigation_params.yaml
robot_navigation/include/robot_navigation/: mission_controller.h  speak_node.h
robot_navigation/launch/: complete_navigation.launch  mission_complete.launch
robot_navigation/src/: audio_chat_node.cpp  barcode_qr_detector.cpp  can_utils.cpp  display_node.cpp  emergency_stop_node.cpp  mission_controller.cpp  open_medicine_box.cpp  video_stream_node.cpp
robot_navigation/srv/: FineTuningStart.srv  OpenMedicineBox.srv  Speak.srv
src/: CMakeLists.txt
src/arm_and_gripper/: CMakeLists.txt  README.md
src/arm_and_gripper/config/: arm_and_gripper.yaml
src/arm_and_gripper/include/arm_and_gripper/: arm_and_gripper_controller.h
src/arm_and_gripper/launch/: arm_and_gripper.launch  servo_controller.launch
src/arm_and_gripper/src/: arm_and_gripper_node.cpp  servo_controller_node.cpp
src/arm_and_gripper/srv/: ArmPlaceMedicine.srv
src/arm_interface/: package.xml
src/arm_interface/src/: arm_controller_node.cpp
src/can_motor_interface/: CMakeLists.txt  package.xml
src/can_motor_interface/launch/: can_interface.launch
src/can_motor_interface/src/: can_interface_node.cpp
src/docs/: 7.1赛事规则.医疗机器人赛项-送药巡诊机器人项目.2025 中国机器人大赛暨RoboCup机器人世界杯中国赛.md  ROS_Noetic_全向轮_CAN联调测试说明.md  赛事功能使用说明.md  赛事功能差距分析与修改方案.md
src/fine_tuning/include/fine_tuning/: fine_tuning_controller.h
src/fine_tuning/launch/: fine_tuning.launch
src/motion_planner/include/motion_planner/: fixed_route_runner.h  kinematics.h
src/motion_planner/src/: base_odometry_main.cpp  base_odometry_node.cpp  cmd_vel_mux_main.cpp  kinematics.cpp  twist_test_node.cpp
src/path_manager/launch/: path_manager.launch  path_tracker.launch
src/path_manager/msg/: PathPoint.msg
src/path_manager/src/: path_tracker_node.cpp
src/path_manager/srv/: SelectPath.srv
src/robot_bringup/: package.xml
src/robot_bringup/config/: paths.yaml
src/robot_navigation/: CMakeLists.txt
src/robot_navigation/config/: mission_params.yaml
src/robot_navigation/include/robot_navigation/: barcode_qr_detector.h  can_utils.h  distance_safety_node.h  health_monitor.h  mission_controller.h  vl53l1x_driver.h
src/robot_navigation/launch/: audio_video_master.launch  audio_video_slave.launch  complete_navigation.launch  dynamic_navigation.launch  mission_complete.launch  test_camera.launch
src/robot_navigation/msg/: QrResult.msg
src/robot_navigation/scripts/: test_camera.py
src/robot_navigation/src/: audio_chat_node.cpp  distance_safety_node.cpp  health_monitor.cpp  mission_controller.cpp  open_medicine_box.cpp  speak_node.cpp  start_button_node.cpp  start_signal_pub.cpp  video_stream_node.cpp  vl53l1x_driver.cpp
