<?xml version="1.0"?>
<package format="2">
  <name>arm_and_gripper</name>
  <version>0.0.1</version>
  <description>药品摆放控制节点：控制机械臂电机（Y42/CAN2）和两个舵机（pigpio PWM），
    在微调完成后执行药品放置动作序列。</description>

  <maintainer email="fire@todo.todo">fire</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
