<?xml version="1.0"?>
<package format="2">
  <name>can_motor_interface</name>
  <version>0.0.1</version>
  <description>SocketCAN interface package for STM32 motor controller.</description>

  <maintainer email="fire@todo.todo">fire</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>socketcan_interface</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>socketcan_interface</exec_depend>

  <export/>
</package>
