<?xml version="1.0"?>
<package format="2">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Top-level bringup package for base + arm system.</description>

  <maintainer email="fire@todo.todo">fire</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>can_motor_interface</exec_depend>
  <exec_depend>motion_planner</exec_depend>
  <exec_depend>arm_interface</exec_depend>
  <exec_depend>path_manager</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export/>
</package>
